fixed image, spacing on regard

--- a/Night Witches/nightwitches.css
+++ b/Night Witches/nightwitches.css
@@ -227,9 +227,10 @@
 		width: 41%;}
 
 	div.sheet-regard {
-		display    : inline-block;
-		margin-left: 8%;
-		width      : 40%;}
+		display      : inline-block;
+		margin-bottom: 2%;
+		margin-left  : 8%;
+		width        : 40%;}
 
 	div.sheet-regard span {
 		display  : inline-block;
